fix vertical alignment on about section

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -568,7 +568,6 @@ html {
     background: url("/images/about-md.png") center top no-repeat;
     background-size: cover;
     padding: 50px 0;
-    padding-left: 5%;
     
     .body {
       margin: 0;
